New boost fields (#1578)
* (search2):
* Prepare for switching over to new boost fields
* Support applying script score to specific boost field

* Don't process _topSciptStr score by default (yet)

* Use new default boost fields